# coding-challenges

./: .gitignore  README.md  index.md
leet-code/: main.py  (+2 more)
project-euler/libs/rust-math-tools/: Cargo.toml
project-euler/libs/rust-math-tools/src/: etc.rs  fraction.rs  gcf.rs  io.rs  lib.rs  numeric.rs  palindrome.rs  prime.rs  reversible.rs  roman.rs
project-euler/problems/rust/: Cargo.toml
project-euler/problems/rust/p002/: Cargo.toml
project-euler/problems/rust/p003/: Cargo.toml
project-euler/problems/rust/p004/: Cargo.toml
project-euler/problems/rust/p005/: Cargo.toml
project-euler/problems/rust/p006/: Cargo.toml
project-euler/problems/rust/p007/: Cargo.toml
project-euler/problems/rust/p008/: Cargo.toml
project-euler/problems/rust/p009/: Cargo.toml
project-euler/problems/rust/p010/: Cargo.toml
project-euler/problems/rust/p011/: Cargo.toml
project-euler/problems/rust/p012/: Cargo.toml
project-euler/problems/rust/p013/: Cargo.toml
project-euler/problems/rust/p014/: Cargo.toml
project-euler/problems/rust/p015/: Cargo.toml
project-euler/problems/rust/p016/: Cargo.toml
project-euler/problems/rust/p017/: Cargo.toml
project-euler/problems/rust/p018/: Cargo.toml
project-euler/problems/rust/p019/: Cargo.toml
project-euler/problems/rust/p020/: Cargo.toml
project-euler/problems/rust/p021/: Cargo.toml
project-euler/problems/rust/p022/: Cargo.toml
project-euler/problems/rust/p023/: Cargo.toml
project-euler/problems/rust/p024/: Cargo.toml
project-euler/problems/rust/p025/: Cargo.toml
project-euler/problems/rust/p026/: Cargo.toml
(+1960 files in other folders)
