[package]
name = "rust"
version = "0.1.0"
authors = ["Calvin Cramer <calvincramer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-sqrt = "0.1.5"
num-bigint = "0.4.0"
num-traits = "0.2.14"
bigdecimal = "0.2.0"
rust-math-tools = { path = "../../libs/rust-math-tools" }
