[package]
name = "rust"
version = "0.1.0"
authors = ["Calvin Cramer <calvincramer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.2.0"
integer-sqrt = "0.1.5"
itertools = "0.10.0"
num-integer = "0.1.44"
num-bigint = "0.4.0"
num-traits = "0.2.14"
pathfinding = "0.1"
rand = "0.8.3"
rayon = "1.5.1"
rust-math-tools = { path = "../../libs/rust-math-tools" }
